deployments-s390x/python-ex-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-ex-prod
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: python-ex-prod
    deploymentconfig: python-ex-prod
  type: ClusterIP
