deployments-s390x/python-ex-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: python-ex-prod
  name: python-ex-prod
spec:
  host: python-ex-prod-ruitest1.apps.bj-linuxone-prod1.cdl.ibm.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: python-ex-prod
    weight: 100
  wildcardPolicy: None
